<resources>
    <string name="app_name">Alura Agenda</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Lista de Alunos</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="author">Fabiano Nascimento</string>
    <string name="extras_Aluno">aluno</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="e_mail">E-mail</string>
    <string name="telefone_celular">Telefone Celular</string>
    <string name="telefone_fixo">Telefone Fixo</string>
    <string name="endereco">Endereço</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="salvar">Salvar</string>
    <string name="remover_aluno">Remover Aluno</string>
    <string name="teste_pra_n_o_fazer_nada">Teste pra não fazer nada</string>
</resources>