<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activity.FormAlunoActivity">

        <EditText
            android:id="@+id/activity_FormAluno_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"
            android:autofillHints="" />

        <EditText
            android:id="@+id/activity_FormAluno_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />

        <EditText
            android:id="@+id/activity_FormAluno_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/telefone"
            android:inputType="phone"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/endere_o"
            android:inputType="textAutoComplete"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/cep"
            android:inputType="textPostalAddress"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/cidade"
            android:inputType="textAutoComplete"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/uf"
            android:inputType="textAutoComplete"
            android:autofillHints="" />


        <Button
            android:id="@+id/activity_FormAluno_botao_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/salvar" />

    </LinearLayout>
</ScrollView>